Visibility fix for nav arrows

--- a/less/datepicker.less
+++ b/less/datepicker.less
@@ -192,7 +192,7 @@
 	}
 
 	.prev, .next {
-		.disabled {
+		&.disabled {
 			visibility: hidden;
 		}
 	}
