--- a/less/datepicker3.less
+++ b/less/datepicker3.less
@@ -220,7 +220,7 @@
 	}
 
 	.prev, .next {
-		.disabled {
+		&.disabled {
 			visibility: hidden;
 		}
 	}
